--- a/style.css
+++ b/style.css
@@ -12,7 +12,7 @@ body{
     height: 100vh;
     display: grid;
     place-items: center;
-    background: #88ce66;
+    background: #856ee1;
     font-family: 'Nunito', sans-serif;
 }
 .container{
