--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Nunito:wght@400;700&display=swap');
 *{
-    padding: 0;
+    padding: 4px;
     margin: 0;
     box-sizing: border-box;
     list-style: none;
